<resources>
    <string name="app_name">CaloriesEstimator</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="interface_time">Interface Time:</string>
    <string name="gpu">GPU</string>
    <string name="gpu_acceleration">GPU Acceleration</string>
    <string name="total_calorie">Total Calorie</string>
    <string name="login">LOGIN</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember">Remember</string>
    <string name="email_atau_password_salah">Email atau password salah</string>
</resources>