<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="module.camera.view.CameraFragment">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black">

            <TextView
                android:id="@+id/title"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:layout_margin="32dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.camera.view.PreviewView
                android:id="@+id/view_finder"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="3:4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5"
                app:scaleType="fillStart" />

            <com.renhard.caloriesestimator.module.camera.view.OverlayView
                android:id="@+id/overlay"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:translationZ="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="3:4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/llSheet"
            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@android:color/transparent">

            <ImageView
                android:id="@+id/btnCapture"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/circle_24px"
                android:layout_gravity="center_horizontal"
                app:tint="@color/white"
                android:layout_marginBottom="30dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/bg_bottom_sheet"
                android:padding="16dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/ivArrow"
                        android:layout_gravity="center_horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_arrow_up"
                        android:layout_centerInParent="true"/>

                    <ImageView
                        android:id="@+id/ivReCapture"
                        android:layout_gravity="center_horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/autorenew_24px"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="20dp"
                        android:foreground="?attr/selectableItemBackground"
                        android:visibility="gone"/>

                </RelativeLayout>

                <LinearLayout
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <TextView
                        android:textColor="@color/purple_200"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/interface_time" />

                    <TextView
                        android:id="@+id/inferenceTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="100000ms" />
                </LinearLayout>

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/cbGPU"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/gpu_acceleration"
                    android:textSize="12sp"
                    android:visibility="gone"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Kalori Makanan"
                    android:textSize="24dp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_centerHorizontal="true"
                    android:padding="12dp"/>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    card_view:cardCornerRadius="8dp"
                    card_view:cardElevation="3dp"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal">

                        <com.github.mikephil.charting.charts.PieChart
                            android:id="@+id/pieChart"
                            android:layout_width="200dp"
                            android:layout_height="200dp" />

                    </RelativeLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    card_view:cardCornerRadius="8dp"
                    card_view:cardElevation="3dp"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="4dp">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </LinearLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</FrameLayout>